<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FF5757"
    tools:context=".MainActivity">


    <Button
        android:layout_marginBottom="15sp"
        android:textSize="20sp"
        android:background="#FE2E2E"
        android:textColor="#FFFFFF"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/EJ1"
        android:id="@+id/btnEjercicio_1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginBottom="15sp"
        android:textSize="20sp"
        android:background="#FE2E2E"
        android:textColor="#FFFFFF"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/EJ2"
        android:id="@+id/btnEjercicio_2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginBottom="15sp"
        android:textSize="20sp"
        android:background="#FE2E2E"
        android:textColor="#FFFFFF"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/EJ3"
        android:id="@+id/btnEjercicio_3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textSize="20sp"
        android:background="#FE2E2E"
        android:textColor="#FFFFFF"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/EJ4"
        android:id="@+id/btnEjercicio_4"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
