<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#0040FF"
    tools:context="com.examen.pablo.jm_xml.EJ1_Empresa">

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EJ1_NumeroEmp"
        android:layout_marginBottom="05dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="40sp"
        android:id="@+id/txtEj1_Empleados"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EJ1_Edad"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="40sp"
        android:id="@+id/txtEj1_Edad"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EJ1_SueldoMin"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="40sp"
        android:id="@+id/txtEj1_Minimo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EJ1_SueldoMax"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtEj1_Maximo"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
